# 42picky.github.io

./: .gitignore  .mailmap  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yml  .yamllint  404.html  CNAME  LICENSE  LICENSE.md  README.md  cspell.config.yaml  index.html  mise.toml  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  tox.ini
.config/: constraints.txt  dictionary.txt  requirements.in  requirements.txt
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  tox.yml
anti-patterns/poor-linting/: index.html
anti-patterns/pr-require-approval/: index.html
anti-patterns/signing-disclamers/: index.html
anti-patterns/unisolated-testing/: index.html
assets/f/schemas/: mkdocs.schema.json
docs/: CNAME  index.md
docs/anti-patterns/: poor-linting.md  pr-require-approval.md  signed-commits.md  signing-disclamers.md  unisolated-testing.md
docs/antipatterns/: signing-disclamers.md
docs/assets/f/schemas/: mkdocs.schema.json
docs/other/: schemas.md
docs/patterns/: formatters.md
docs/principles/: kiss.md
docs/stories/: from-sphinx-to-mkdocs.md
docs/stylesheets/: extra.css
opinionated/: tox-for-python.py
other/schemas/: index.html
overrides/: main.html
patterns/formatters/: index.html
principles/kiss/: index.html
search/: search_index.json
stories/from-sphinx-to-mkdocs/: index.html
tags/: index.html
tools/: ansi-test.sh
