# cspell: ignore tomlsort

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5" # required for "no-local-version" scheme
]

[project]
dynamic = ["version", "dependencies", "optional-dependencies"]
name = "42picky"
requires-python = ">=3.13"

[tool.setuptools.dynamic]
dependencies = {file = [".config/requirements.in"]}

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.uv.pip]
annotation-style = "line"
custom-compile-command = "tox run deps"
no-emit-package = ["pip", "typing_extensions", "uv"]
