# cspell: ignore tomlsort posargs PROGRAMDATA

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 65.3.0", # required by pyproject+setuptools_scm integration and editable installs
  "setuptools_scm[toml] >= 7.0.5" # required for "no-local-version" scheme
]

[dependency-groups]
lint = [
  "pre-commit>=4.1",
  "pre-commit-uv>=4.1.4",
  "pytest>=7.2.2",
  "setuptools>=51.1.1"
]

[project]
dependencies = [
  "cairosvg>=2.8.2",
  "markdown-exec>=1.11.0",
  "markdown-include>=0.8.1",
  "mkdocs>=1.6.1",
  "mkdocs-autorefs>=1.4.3",
  "mkdocs-git-authors-plugin>=0.10.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.18",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocstrings>=0.30.0",
  "mkdocstrings-python>=1.18.2",
  "pillow>=11.3.0",
  "pygments-ansi-color>=0.3.0",
  "pymdown-extensions>=10.16.1",
  "slugify>=0.0.1"
]
dynamic = ["version"]
name = "42picky"
requires-python = ">=3.13"

[tool.tomlsort]
in_place = true
sort_inline_tables = true
sort_table_keys = true

[tool.tox]
env_list = [
  "lint",
  "docs",
  "deps"
]
isolated_build = true
requires = [
  "tox>=4.28.4",
  "tox-extra >= 2.1",
  "tox-uv >= 1.28.0"
]

[tool.tox.env.deps]
commands = [
  ["pre-commit", "run", "--all-files", "--show-diff-on-failure", "--hook-stage", "manual", "deps"],
  # Update pre-commit hooks
  ["pre-commit", "autoupdate"]
]
commands_pre = []
description = "Bump all test dependencies"
# we reuse the lint environment
env_dir = "{tox_work_dir}/lint"
skip_install = true

[tool.tox.env.docs]
commands = [
  ["mkdocs", {default = ["build", "--strict", "--site-dir=_readthedocs/html/"], extend = true, replace = "posargs"}]
]
description = "Builds docs"
groups = ["docs"]
skip_install = false

[tool.tox.env.lint]
commands = [
  ["pre-commit", "run", "--all-files", "--show-diff-on-failure"]
]
commands_pre = []
dependency_groups = ["lint"]
description = "Run all linters"
skip_install = true

[tool.tox.env_run_base]
description = "Run the tests under {base_python}"
package = "editable"
pass_env = [
  "CI",
  "CURL_CA_BUNDLE", # https proxies, https://github.com/tox-dev/tox/issues/1437
  "FORCE_COLOR",
  "GH_*",
  "GITHUB_*",
  "HOME",
  "HOMEPATH",
  "LANG",
  "LC_*",
  "NO_COLOR",
  "PYTEST_*", # allows developer to define their own preferences
  "PYTHON*", # PYTHONPYCACHEPREFIX, PYTHONIOENCODING, PYTHONBREAKPOINT,...
  "PY_COLORS",
  "PRE_COMMIT_HOME",
  "PROGRAMDATA",
  "REQUESTS_CA_BUNDLE",
  "RUFF_OUTPUT_FORMAT",
  "RTD_TOKEN",
  "REQUESTS_CA_BUNDLE", # https proxies
  "SETUPTOOLS_SCM_DEBUG",
  "SSH_AUTH_SOCK",
  "SSL_CERT_FILE", # https proxies
  "UV_*"
]

[tool.tox.env_run_base.set_env]
DYLD_FALLBACK_LIBRARY_PATH = "/opt/homebrew/lib:{env:LD_LIBRARY_PATH}"
FORCE_COLOR = "1"
PRE_COMMIT_COLOR = "always"
